# MyRust

./: .gitignore  README.md
HashMapApp/: Cargo.toml
HashMapApp/src/: main.rs
basics/src/: main.rs
cortegi/src/: main.rs
enums_app/: Cargo.toml
errors/src/: main.rs
if_let/src/: main.rs
learn/cortegi/: Cargo.toml
learn/cortegi/src/: main.rs
learn/enums_app/src/: main.rs
learn/fnc/: Cargo.toml
learn/fnc/src/: main.rs
learn/iterators/src/: main.rs
learn/mass/: Cargo.toml
learn/mass/src/: main.rs
learn/modules/src/: main.rs  test.rs
learn/modules_part2/: Cargo.toml
learn/modules_part2/src/: main.rs
learn/my_errors/: Cargo.toml
learn/my_errors/src/: main.rs
learn/my_errors2/: Cargo.toml
learn/my_errors2/src/: main.rs
learn/my_errors3_cool/: Cargo.toml
learn/my_errors3_cool/src/: main.rs
learn/obobhenia/: Cargo.toml
learn/obobhenia/src/: main.rs
learn/rangeapp/: Cargo.toml
learn/sqr_uraw/: Cargo.toml
learn/stroki/: Cargo.toml
learn/struct_app/: Cargo.toml
learn/while_let/: Cargo.toml
learn/work_with_files/: Cargo.toml
learn/zamikania/: Cargo.toml
memory/src/: main.rs
output_print/: Cargo.toml
projects/bank_errors/: Cargo.toml
projects/encryption_man/: Cargo.toml  data_enc_45.txt
projects/file_search/: Cargo.toml
projects/sort_org/: Cargo.toml
projects/task_manager/: Cargo.toml
projects/task_manager/src/: main.rs
rust-cargo/src/: main.rs
sqr_uraw/src/: main.rs
stroki/src/: main.rs
vector2_methods/: Cargo.toml
vector2_methods/src/: main.rs
while_let/src/: main.rs
work_with_files/: data.txt
(+16 files in other folders)
