[package]
name = "task_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] } # получение текущего времени и другое для работы со временем
serde = { version = "1.0.174", features = ["derive"] } # сериализация и десериализация
serde_json = "1.0.103"
